# tubitak-sal-android

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  Readme.md  TUBITAK-4006-SAL.pro  TUBITAK-4006-SAL.pro.user.4.9-pre1  TUBITAK4006SAL.cpp  TUBITAK4006SAL.h  TUBITAK4006SAL.qrc  girisEkrani.ui  index.html  main.cpp  okul.ui  picture-screen.ui  projeEkran1.ui  projeEkran1.ui.autosave  settings.gradle  veriler.qrc  veriler21.h  zxz
Kaynak Dosyalar/: namespace.h
Kaynak Dosyalar/veriler/: veriler1.h  veriler10.h  veriler11.h  veriler12.h  veriler13.h  veriler14.h  veriler15.h  veriler16.h  veriler17.h  veriler18.h  veriler19.h  veriler2.h  veriler20.h  veriler21.h  veriler22.h  veriler23.h  veriler24.h  veriler3.h  veriler4.h  veriler5.h  veriler6.h  veriler7.h  veriler8.h  veriler9.h
Kaynak Dosyaları/ Veriler/: veriler1.h  veriler10.h  veriler11.h  veriler12.h  veriler13.h  veriler14.h  veriler15.h  veriler16.h  veriler17.h  veriler18.h  veriler2.h  veriler3.h  veriler4.h  veriler5.h  veriler6.h  veriler7.h  veriler8.h  veriler9.h
Kaynak_Dosyalar/: Readme.md  TUBITAK4006SAL.cpp  TUBITAK4006SAL.h  main.cpp  namespace.h  program.cpp  program.h  qml.qrc
Taslaklar/: Readme.md
Taşlaklar/: Readme.md
android/: AndroidManifest.xml
app/: build.gradle
formlar/: Readme.md  girisEkrani.ui  okul.ui  picture-screen.ui  projeEkran1.ui
proje yapanlar/: proje_yapanlar1.md  proje_yapanlar2.md
resources/: Readme.md  TUBITAK4006SAL.qrc  proje__fotoraflari.qrc  resimler.qrc
veriler/: Readme.md  yapılanlar.md
webpage/: index.html  readme.md  style.css  sürüm-notlari.html
(+47 files in other folders)
